--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -18,6 +18,15 @@
                                                                              type_id: bot.type_id, bot_id: bot.id } do %>
             <i class="fas fa-pencil-alt"></i>
           <% end %>
+          <!-- The flag stuff needs to be made noscript safe -->
+          <% if bot.actions.exists?(user:current_user, actionable_type: "TwitterReport") %>
+            <a class="text-danger" href="#"><i class="fas fa-flag"></i></a>
+          <% else %>
+            <%= link_to twitter_report_path(bot_id: bot.id), method: :post, 'data-confirm'=> "You're sure you've flagged this bot through twitter?", class: "text-muted" do %>
+              <i class="fas fa-flag"></i>
+            <% end %>
+          <% end %>
+          <i>(<%= bot.twitter_report_count %>)</i>
           &nbsp;
           <%= link_to bot.username, bot_path(bot), data: { toggle: 'modal', target: '#botInfoModal', username: bot.username, type_id: bot.type_id,
                                                            type: bot.type.name, bot_id: bot.id, twttr: bot.twitter_username },
